# simple_cosfitter

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  README.md  configure  configure.ac  configure.in
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
idl/.svn/: entries
idl/.svn/text-base/: contourshow.pro.svn-base
sample/: Astier_flat_param.txt  Astier_param.txt  Astier_wom_extout.txt  Astier_wom_param.txt  Astier_womfix_param.txt  Kowalski_syscovmat.txt  Kowalski_wom_nosys_param.txt  Kowalski_wom_output.txt  Kowalski_wom_param.txt  Riess98_omol_param.txt  Riess98_wom_param.txt  knop03_param.txt  lowe_data.txt  lowe_extcorr_param.txt  lowe_extcorr_wom_param.txt  lowe_param.txt  sample_covfile.txt
src/: Makefile.am  auxconstraint.cc  auxconstraint.h  baryonpeak_grid.cc  combine_prob.cc  convert_prob_to_fits.cc  convert_to_fits.cc  cosfitterexcept.cc  cosfitterexcept.h  cosgrids.cc  cosgrids.h  cosgridtest.cc  covmatrix.cc  covmatrix.h  covmatrix_woodbury.cc  covmatrix_woodbury.h  covmatrixtest.cc  fitter.cc  fitter.h  get_acoustic.cc  get_lumdist.cc  get_wmap_shift.cc  getchi.cc  indivchi.cc  indivchi_twoscriptm.cc  lumdist.cc  lumdist.h  lumdist_array.cc  lumdist_array.h  lumdisttest.cc  mainpage.h  omprior_grid.cc  param_results.cc  param_results.h  param_tags.h  paramfile.cc  paramfile.h  percival_grid.cc  runfitter.cc  snedata.cc  (+10 more)
